hello world app working with angular

--- a/apps/todo/public/index.html
+++ b/apps/todo/public/index.html
@@ -4,7 +4,14 @@
     </head>
     <body>
         <div class="content">
-            <h1>Hello world!</h1>
+            <todo></todo>
         </div>
     </body>
+
+    <!-- Client Amorphic Library -->
+    <script src="/amorphic/client.js?ver=0" defer></script>
+    <!-- Amorphic Dynamically Generated Initialization Script -->
+    <script src="/amorphic/init/todo.js?ver=0" defer></script>
+    <!-- Amorphic Client Initialization Script -->
+    <script src="/amorphic/clientInit.js?ver=0" defer></script>
 </html>
